# yarw

./: Cargo.toml
.github/workflows/: test.yml
apps/cli/: Cargo.toml
apps/cli/src/: args.rs  lib.rs  main.rs
apps/cli/src/commands/: mod.rs  player.rs  profile.rs
core/: Cargo.toml
core/src/: config.rs  dirs.rs  lib.rs  profile.rs
crates/utils/: Cargo.toml
crates/utils/src/: fs.rs  lib.rs
crates/utils/src/tests/: fs.rs
