[workspace]
resolver = "2"

members = [
    "core",
    "apps/*",
]


[workspace.package]
license = "GPL-3.0-only"
repository = "https://github.com/yarwhq/yarw"
description = "Yet another Roblox wrapper"

[workspace.dependencies]
tokio = { version = "1.35.1", features = ["full"] }
thiserror = "1.0.52"
log = "0.4.20"
uuid = { version = "1.2.2" }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108" 
directories = "5.0.1"