[package]
name = "yarw_core"
version = "0.0.0"
license = { workspace = true }
description = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }
bincode = "1.3.3"
lazy_static = "1.4.0"
uuid = { workspace = true, features = ["v4"] }
yarw_utils = { path = "../crates/utils" }