[package]
name = "yarw_utils"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
lazy_static = "1.4.0"